crates/atm/tests/snapshots/ui_snapshots__footer_search_prompt.snap
---
source: crates/atm/tests/ui_snapshots.rs
expression: buf
---
Buffer {
    area: Rect { x: 0, y: 0, width: 50, height: 3 },
    content: [
        "┌────────────────────────────────────────────────┐",
        "│ /sonnet▌  Enter keep  Esc clear                │",
        "└────────────────────────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 10, y: 1, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 33, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
