crates/atm/tests/snapshots/ui_snapshots__footer_with_active_filter_80_cols.snap
---
source: crates/atm/tests/ui_snapshots.rs
expression: buf
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 3 },
    content: [
        "┌──────────────────────────────────────────────────────────────────────────────┐",
        "│ /sonnet 1/3  |  j/↓ down  k/↑ up  gg top  G end  ^d/^u page    |  Enter jump │",
        "└──────────────────────────────────────────────────────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 1, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 1, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 21, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 1, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 31, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 36, y: 1, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 38, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 44, y: 1, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 45, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 51, y: 1, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 56, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 63, y: 1, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 68, y: 1, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 73, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
