crates/atm/tests/snapshots/ui_snapshots__header_with_active_filter.snap
---
source: crates/atm/tests/ui_snapshots.rs
expression: buf
---
Buffer {
    area: Rect { x: 0, y: 0, width: 100, height: 3 },
    content: [
        "┌──────────────────────────────────────────────────────────────────────────────────────────────────┐",
        "│ATM - Agent Tmux Manager | Connected | 3 sessions | $0.450 | avg 21% | 1 working | /sonnet 1/3    │",
        "└──────────────────────────────────────────────────────────────────────────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 4, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 1, fg: Green, bg: Reset, underline: Reset, modifier: BOLD,
        x: 37, y: 1, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 81, y: 1, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 95, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 1, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
