crates/atm/tests/snapshots/ui_snapshots__session_list_filter_dims_context_lead.snap
---
source: crates/atm/tests/ui_snapshots.rs
expression: buf
---
Buffer {
    area: Rect { x: 0, y: 0, width: 45, height: 6 },
    content: [
        "┌ Sessions (3) ─────────────────────────────┐",
        "│ ▼ project-alpha                           │",
        "│   -   40% lead0000 [claude] Opus 4.5      │",
        "│>    >   15% mate0000 [claude] Sonne...    │",
        "│                                           │",
        "└───────────────────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 2, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 1, fg: White, bg: Reset, underline: Reset, modifier: BOLD,
        x: 17, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 44, y: 1, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD | DIM,
        x: 2, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 4, y: 2, fg: LightMagenta, bg: Reset, underline: Reset, modifier: BOLD | DIM,
        x: 6, y: 2, fg: Green, bg: Reset, underline: Reset, modifier: BOLD | DIM,
        x: 11, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 12, y: 2, fg: DarkGray, bg: Reset, underline: Reset, modifier: DIM,
        x: 20, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 21, y: 2, fg: Yellow, bg: Reset, underline: Reset, modifier: DIM,
        x: 29, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 30, y: 2, fg: White, bg: Reset, underline: Reset, modifier: DIM,
        x: 38, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 44, y: 2, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: Cyan, bg: Rgb(30, 30, 40), underline: Reset, modifier: BOLD,
        x: 2, y: 3, fg: Reset, bg: Rgb(30, 30, 40), underline: Reset, modifier: NONE,
        x: 6, y: 3, fg: Blue, bg: Rgb(30, 30, 40), underline: Reset, modifier: BOLD,
        x: 8, y: 3, fg: Green, bg: Rgb(30, 30, 40), underline: Reset, modifier: BOLD,
        x: 13, y: 3, fg: Reset, bg: Rgb(30, 30, 40), underline: Reset, modifier: NONE,
        x: 14, y: 3, fg: DarkGray, bg: Rgb(30, 30, 40), underline: Reset, modifier: NONE,
        x: 22, y: 3, fg: Reset, bg: Rgb(30, 30, 40), underline: Reset, modifier: NONE,
        x: 23, y: 3, fg: Yellow, bg: Rgb(30, 30, 40), underline: Reset, modifier: NONE,
        x: 31, y: 3, fg: Reset, bg: Rgb(30, 30, 40), underline: Reset, modifier: NONE,
        x: 32, y: 3, fg: White, bg: Rgb(30, 30, 40), underline: Reset, modifier: NONE,
        x: 40, y: 3, fg: Reset, bg: Rgb(30, 30, 40), underline: Reset, modifier: NONE,
        x: 44, y: 3, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 44, y: 4, fg: White, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
